Fixed mobile alignment for skeletons

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -12,14 +12,13 @@
 
 #loginPage h1 {
   text-align: center;
-  margin-bottom: 24px;
   font-size: 32px;
 }
 
 #loginPage .loginForm {
   min-width: 30rem;
   position: absolute;
-  top: 30%;
+  top: 20%;
   display: flex;
   flex-direction: column;
 }
@@ -127,5 +126,14 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #loginPage .loginForm {
+    min-width: 0;
+    width: 90vw;
+    top: 30%;
+    left: 5%;
   }
 }
